# pipelines-nodes

./: .gitmodules
3-d-merger/: merge_stl.py  node.json  requirements.txt
3D-transformer/: Dockerfile  merge_stl.py  node.json  requirements.txt  viz2d3d.py
auth-check/: Dockerfile  main.py  node.json
cbr-table-source/: Dockerfile  fetch.py  node.json  transform.py
cbr-table-source/sdk/: LICENSE
correlation-report/: Dockerfile  node.json  transform.py
data-access-server/: Dockerfile  node.json  query.py
db-auth-table-source/: Dockerfile  fetch.py  node.json
db-auth-table-source/sdk/: pyproject.toml
db-table-source/: fetch.py  node.json
db-table-source/sdk/: README.md
db-view-source/: Dockerfile  fetch.py  node.json
db-view-source/sdk/: README.md  USAGE.md  pyproject.toml
db-view-source/sdk/src/cbr_data_access/: __init__.py  client.py  config.py  exceptions.py  views.py
db_table_source/: node.json
feature-scaler/: node.json  transform.py
label-encoder/: Dockerfile  node.json  transform.py
measurement-clustering/: Dockerfile  node.json  transform.py
missing-value-fill/: Dockerfile  main.py  node.json  requirements.txt  test_logic.py
omop-wide-table-source/: Dockerfile  node.json  sync-sdk.sh  transform.py
omop-wide-table-source/sdk/: README.md  USAGE.md  pyproject.toml
omop-wide-table-source/sdk/tests/: test_adbc.py  test_aggregate.py
outlier-remover/: Dockerfile  node.json  transform.py
patient-measurement-clustering/: Dockerfile  clustering.py  node.json  requirements.txt
sleep/: Dockerfile  main.py  node.json
sql-transformer/: Dockerfile  node.json  requirements.txt  transform.py
stl-merger/: Dockerfile  merge.py  node.json
timepoint-assignment/: README.md  main.py  make_test_data.py  node.json  pdf_example.py  requirements.txt  test_logic.py  test_visits.csv  test_visits.xlsx
transformer/: Dockerfile  node.json  transform.py
(+14 files in other folders)
