[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbr-data-access"
version = "0.1.0"
description = "Python SDK for authenticated data access to the CBR / datakaveri platform (Keycloak auth + managed PostgreSQL queries)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "datakaveri", email = "analytics@datakaveri.org" }]
keywords = ["cbr", "datakaveri", "keycloak", "postgresql", "sqlalchemy", "data-access", "omop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyJWT>=2.13",          # imported as `jwt`
    "requests>=2.31",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9", # imported as `psycopg2`
    "pandas>=2.0",          # core: query() returns DataFrames
    "pyarrow>=14",          # parquet engine for download_views(file_format="parquet")
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10", "types-requests"]

[project.urls]
Homepage = "https://github.com/datakaveri/data-access-py-sdk"
Repository = "https://github.com/datakaveri/data-access-py-sdk"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cbr_data_access = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
